Next round of TinyMCE Enterprise doc porting